fixed weird spacing at the bottom

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,6 @@ nav div.container-fluid {
 }
 
 footer{
-    background-image: ;
+    background-image: url("images/su") ;
 }
 
